# stm32-cmake

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  build-target.sh  run-docker-native.sh  run-docker.sh  toolchain.cmake
app/: BSP_setup.c  CMakeLists.txt  main.cpp
application/: CMakeLists.txt  main.cpp
application/bsp/nucleo-g474re/: CMakeLists.txt
application/components/led/inc/: led.h
application/components/led/src/: led.cpp
application/platform/mcal/dio/inc/: dio.h
application/platform/mcal/uart/: CMakeLists.txt
bsp/: CMakeLists.txt
bsp/nucleo-g474re/src/: BSP_setup.c
cmake/: cm4.cmake  gcc-arm-none-eabi.cmake  toolchain.cmake  utilities.cmake
components/: CMakeLists.txt
components/adder/: CMakeLists.txt
components/adder/inc/: adder.h
components/adder/src/: adder.cpp
components/fpmath/: CMakeLists.txt
components/fpmath/inc/: fpmath.h
components/fpmath/src/: fpmath.c
components/led/: CMakeLists.txt
components/led/inc/: led.h
components/led/src/: led.cpp
components/mcal/clockctrl/src/: clockctrl.cpp
components/mcal/dio/: CMakeLists.txt
components/mcal/dio/src/: dio.cpp
components/observer/: CMakeLists.txt
components/observer/examples/: CMakeLists.txt  obs_example.c  obs_example.h
components/observer/inc/: IObserver.h  ISubject.h
components/observer/src/: Observer.c  observer.c
components/observer/test/: CMakeLists.txt  ObserverTest.cpp  utest.adoc
components/relay/: CMakeLists.txt
contrib/: CMakeLists.txt
contrib/CMSIS/: CMakeLists.txt
platform/: CMakeLists.txt
platform/mcal/clockctrl/inc/: clockctrl.h
platform/mcal/dio/: CMakeLists.txt
platform/mcal/dio/inc/: dio.h
platform/mcal/dio/src/: dio.cpp
platform/mcal/i2c/: CMakeLists.txt
platform/mcal/uart/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
